# toolcase

./: 0.md  README.md  pyproject.toml
src/toolcase/: README.md  __init__.py  cache.py  core.py  decorator.py  progress.py  registry.py
src/toolcase/agents/: escalation.py  fallback.py  gate.py  race.py  router.py
src/toolcase/cache/: __init__.py  cache.py  redis.py
src/toolcase/cli/: help.py
src/toolcase/cli/topics/: __init__.py  architecture.py  batch.py  cache.py  concurrency.py  discovery.py  effects.py  errors.py  formats.py  help_topic.py  http.py  imports.py  logging.py  mcp.py  middleware.py  overview.py  registry.py  result.py  retry.py  settings.py  streaming.py  testing.py  tool.py  tracing.py  validation.py
src/toolcase/core/: __init__.py  base.py  decorator.py
src/toolcase/dev/tests/: test_agents.py  test_cache.py  test_http_tool.py  test_pipeline_streaming.py  test_result.py  test_streaming.py  test_testing.py
src/toolcase/di/: __init__.py  container.py
src/toolcase/errors/: __init__.py  errors.py  examples.py  result.py  tool.py  types.py
src/toolcase/ext/integrations/: frontiers.py  langchain.py
src/toolcase/ext/mcp/: bridge.py  server.py
src/toolcase/foundation/: __init__.py
src/toolcase/foundation/config/: __init__.py  settings.py
src/toolcase/foundation/core/: __init__.py  base.py  decorator.py
src/toolcase/foundation/di/: container.py
src/toolcase/foundation/errors/: __init__.py  errors.py  examples.py  result.py  tool.py  types.py
src/toolcase/foundation/registry/: registry.py
src/toolcase/foundation/testing/: case.py  fixture.py  mock.py
src/toolcase/integrations/: frontiers.py  langchain.py
src/toolcase/io/: README.md
src/toolcase/io/cache/: __init__.py  cache.py  memcached.py  redis.py
src/toolcase/io/progress/: progress.py
src/toolcase/io/streaming/: adapters.py  codec.py  stream.py
src/toolcase/mcp/: __init__.py  bridge.py  server.py
src/toolcase/middleware/: __init__.py  builtins.py  middleware.py
src/toolcase/middleware/plugins/: __init__.py  breaker.py  logging.py  metrics.py  rate_limit.py  retry.py  timeout.py
src/toolcase/monads/: README.md  __init__.py  examples.py  result.py  tool.py
src/toolcase/observability/: __init__.py  context.py  exporter.py  middleware.py  span.py  tracer.py
src/toolcase/pipeline/: __init__.py  pipe.py
src/toolcase/progress/: __init__.py
src/toolcase/registry/: registry.py
src/toolcase/retry/: __init__.py  policy.py
src/toolcase/runtime/: README.md  __init__.py
src/toolcase/runtime/agents/: escalation.py  fallback.py  gate.py  race.py  router.py
src/toolcase/runtime/batch/: __init__.py  batch.py  idempotent.py
src/toolcase/runtime/concurrency/: README.md  __init__.py  (+7 more)
src/toolcase/streaming/: __init__.py  adapters.py  stream.py
src/toolcase/testing/: case.py  fixture.py  mock.py
src/toolcase/tests/: test_agents.py  test_cache.py  test_http_tool.py  test_result.py  test_testing.py
src/toolcase/tools/: README.md  __init__.py  base.py  discovery.py  http.py
(+52 files in other folders)
